// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should match inline snapshot 1`] = `
<div>
  <ul
    class="o-list o-list-inline"
  >
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
  </ul>
</div>
`;

exports[`<List /> should match ol snapshot 1`] = `
<div>
  <ol
    class="o-list o-list-stacked"
  >
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
  </ol>
</div>
`;

exports[`<List /> should match stacked snapshot 1`] = `
<div>
  <ul
    class="o-list o-list-stacked"
  >
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
    <li
      class="o-list-inline__item"
    >
      List item
    </li>
  </ul>
</div>
`;

exports[`<ListItem /> should match highlighted snapshot 1`] = `
<div>
  <li
    class="o-list-inline__item o-list__item--highlighted"
  >
    List item
  </li>
</div>
`;

exports[`<ListItem /> should match snapshot 1`] = `
<div>
  <li
    class="o-list-inline__item"
  >
    List item
  </li>
</div>
`;
